[package]
name = "pin_tree"
version = "0.2.0"
authors = ["Package <Aditrc@outlook.com>"]
edition = "2018"
description = "HashMap/Set<Pin<Arc<T>>> based fully safety tree collection"
repository = "https://github.com/2A5F/PinTree"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
